# pystruct

./: README.md  pyproject.toml
src/pystruct/: main.py  structure.yaml
